--- a/source/_css/modules/typography.scss
+++ b/source/_css/modules/typography.scss
@@ -226,7 +226,7 @@
   ul,
   ol,
   blockquote {
-    margin: 0.5em 0 !important;
+    margin: 0.5em 0;
   }
 
   p {
